add foother and coursel

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,50 +4,223 @@
     box-sizing: border-box;
 }
 
+.d-flex-j-c-center-a-i-center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 $width-100-percent: 100%;
-$color-black:black;
+$color-black: black;
+$color-grey: #7E7E7E;
+$color-orange: #E85826;
+
 .header-box {
     width: $width-100-percent;
     outline: 1;
-    padding: 20px 0px;
-    
+    padding: 17.5px 0px;
+
     a {
         text-decoration: none;
     }
+
     .logo {
         height: 48px;
         margin-right: 1.5rem;
     }
+
     select {
         border: none;
         outline: none;
         background-color: #FBFAFA;
     }
-    .search-box{
 
-        input{
+    .search-box {
+
+        input {
             border: none;
             outline: none;
         }
-        
+
     }
-    .login-register{
-        color: orangei{
-            margin-right: 5px;
-        }
-        :& i{
-            color: red;
-        }
+
+    .login-register {
+        color: $color-orange;
+
     }
-    
+
 }
-.navbar{
-   li{
-     list-style: none;
-     a{
-        text-decoration: none;
-        color: $color-black;
+
+nav {
+    box-shadow: 0 4px 16px rgb(0 0 0 / 8%), 0 -1px 0 #f7f7f7;
+}
+
+.navigation-bar {
+    @extend .d-flex-j-c-center-a-i-center;
+    margin-bottom: 0;
+    padding: 18px 0px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 14px;
+
+    li {
+        list-style: none;
+
+        a {
+            text-decoration: none;
+            color: $color-black;
+        }
     }
-   }
-    
+}
+
+.coursel-box {
+    position: relative;
+
+    img {
+        width: 100%;
+        height: 600px;
+    }
+
+    .custom-shape-divider-bottom-1661330328 {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        overflow: hidden;
+        line-height: 0;
+        transform: rotate(180deg);
+    }
+
+    .custom-shape-divider-bottom-1661330328 svg {
+        position: relative;
+        display: block;
+        width: calc(100% + 1.3px);
+        height: 150px;
+    }
+
+    .custom-shape-divider-bottom-1661330328 .shape-fill {
+        fill: #FFFFFF;
+    }
+}
+
+.card-section {
+    padding: 1.5rem 0px;
+
+    p {
+        color: $color-grey;
+
+    }
+
+    a {
+        color: $color-orange;
+        text-decoration: none;
+        font-weight: bold;
+        margin-left: 5px;
+    }
+
+    .cards-box {
+        .card-body {
+            padding-left: 0px;
+            transition: 250ms all linear;
+
+        }
+
+        margin-top: 1rem;
+
+        img {
+            height: 360px;
+            border-radius: 5px;
+        }
+
+        a {
+            font-weight: 400;
+            display: block;
+            margin-left: 0px;
+        }
+
+        .card {
+            transition: 250ms all linear;
+
+            &:hover {
+                transition: 250ms all linear;
+                transform: scale(1.05);
+            }
+        }
+    }
+}
+
+footer {
+    font-size: 15px;
+
+    img {
+        width: 70px;
+        margin-bottom: 1rem;
+    }
+
+    p {
+        color: $color-grey;
+    }
+
+    a {
+        display: block;
+        color: $color-grey ;
+        text-decoration: none;
+        margin-top: 1rem;
+    }
+
+    ul {
+
+        padding-left: 0;
+
+        li {
+            list-style: none;
+        }
+    }
+
+    i {
+        transform: scale(1.5);
+        margin-right: 2rem;
+    }
+}
+
+.about-references {
+
+    p {
+        text-align: justify;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 28px;
+        letter-spacing: -0.01em;
+        color: #222222;
+    }
+
+    .read-more-startup {
+        margin-top: 32px;
+        border-radius: 12px;
+        color: #fff !important;
+        text-decoration: none;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 14px;
+        cursor: pointer;
+        padding: 18px 26px;
+        background: $color-orange;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 150px;
+    }
+    img{
+    height: 120px;
+    };
+}
+@media screen and (max-width: 1600px){
+    .coursel-box {
+        img {
+            width: 100%;
+            height: 590px;
+        }
+    }
 }
