--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,16 @@
   box-sizing: border-box;
 }
 
+.d-flex-j-c-center-a-i-center, .navigation-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .header-box {
   width: 100%;
   outline: 1;
-  padding: 20px 0px;
+  padding: 17.5px 0px;
 }
 .header-box a {
   text-decoration: none;
@@ -26,14 +32,150 @@
   outline: none;
 }
 .header-box .login-register {
-  color: orangei;
-  color-margin-right: 5px;
+  color: #E85826;
 }
 
-.navbar li {
+nav {
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08), 0 -1px 0 #f7f7f7;
+}
+
+.navigation-bar {
+  margin-bottom: 0;
+  padding: 18px 0px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+}
+.navigation-bar li {
   list-style: none;
 }
-.navbar li a {
+.navigation-bar li a {
   text-decoration: none;
   color: black;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.coursel-box {
+  position: relative;
+}
+.coursel-box img {
+  width: 100%;
+  height: 600px;
+}
+.coursel-box .custom-shape-divider-bottom-1661330328 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+.coursel-box .custom-shape-divider-bottom-1661330328 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 150px;
+}
+.coursel-box .custom-shape-divider-bottom-1661330328 .shape-fill {
+  fill: #FFFFFF;
+}
+
+.card-section {
+  padding: 1.5rem 0px;
+}
+.card-section p {
+  color: #7E7E7E;
+}
+.card-section a {
+  color: #E85826;
+  text-decoration: none;
+  font-weight: bold;
+  margin-left: 5px;
+}
+.card-section .cards-box {
+  margin-top: 1rem;
+}
+.card-section .cards-box .card-body {
+  padding-left: 0px;
+  transition: 250ms all linear;
+}
+.card-section .cards-box img {
+  height: 360px;
+  border-radius: 5px;
+}
+.card-section .cards-box a {
+  font-weight: 400;
+  display: block;
+  margin-left: 0px;
+}
+.card-section .cards-box .card {
+  transition: 250ms all linear;
+}
+.card-section .cards-box .card:hover {
+  transition: 250ms all linear;
+  transform: scale(1.05);
+}
+
+footer {
+  font-size: 15px;
+}
+footer img {
+  width: 70px;
+  margin-bottom: 1rem;
+}
+footer p {
+  color: #7E7E7E;
+}
+footer a {
+  display: block;
+  color: #7E7E7E;
+  text-decoration: none;
+  margin-top: 1rem;
+}
+footer ul {
+  padding-left: 0;
+}
+footer ul li {
+  list-style: none;
+}
+footer i {
+  transform: scale(1.5);
+  margin-right: 2rem;
+}
+
+.about-references p {
+  text-align: justify;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: -0.01em;
+  color: #222222;
+}
+.about-references .read-more-startup {
+  margin-top: 32px;
+  border-radius: 12px;
+  color: #fff !important;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  cursor: pointer;
+  padding: 18px 26px;
+  background: #E85826;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+}
+.about-references img {
+  height: 120px;
+}
+
+@media screen and (max-width: 1600px) {
+  .coursel-box img {
+    width: 100%;
+    height: 590px;
+  }
+}
